Opened 5 years ago

Closed 4 years ago

Last modified 3 months ago

#15574 closed bug (fixed)

BDirectWindow flicker when video is playing behind it

Reported by: X512 Owned by: axeld
Priority: normal Milestone: R1/beta3
Component: Servers/app_server Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #11083, #15858, #15920
Platform: All

Description

This is hrev53644 x86_64.

Steps to reproduce:

  1. Open GLTeapot.
  2. Open some video in MediaPlayer.
  3. Place GLTeapot on front of VideoPlayer.
  4. Intersecting part will flicker.

VideoPlayer display mode is DrawBitmap.

Change History (8)

comment:1 by X512, 5 years ago

In addition to MediaPlayer, any window that repeatedly call BView::DrawBitmap like Haiku3d or Qt windows also cause flickering.

comment:2 by X512, 5 years ago

BView::DrawBitmap cause flushing of screen backbuffer outside of drawing area in app_server while it shouldn't.

comment:3 by X512, 5 years ago

I identified problem. DrawBitmap and other drawing operations flush back buffer bounding rectangle instead of region that flush area that not belongs to window: https://git.haiku-os.org/haiku/tree/src/servers/app/drawing/DrawingEngine.cpp#n638.

comment:4 by pulkomandy, 4 years ago

Milestone: UnscheduledR1/beta3
Resolution: fixed
Status: newclosed

comment:5 by X512, 4 years ago

Please close #11083, #15858 as duplicates.

comment:6 by waddlesplash, 4 years ago

Blocking: 11083 added

comment:7 by waddlesplash, 4 years ago

Blocking: 15858 added

comment:8 by waddlesplash, 3 months ago

Blocking: 15920 added
Note: See TracTickets for help on using tickets.